Closed
Bug 1284198
Opened 9 years ago
Closed 9 years ago
Build is broken on macOS 10.12 Sierra
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla50
People
(Reporter: ojab, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.17 KB,
patch
|
terrence
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:49.0) Gecko/20100101 Firefox/49.0
Build ID: 20160703004019
Steps to reproduce:
./mach build
Actual results:
build fails
Expected results:
build succeed
The exact error is
0:29.28 /Users/ojab/Documents/repos/mozilla-central/js/src/threading/posix/ConditionVariable.cpp:77:12: error: use of undeclared identifier 'pthread_condattr_setclock'; did you mean 'pthread_condattr_setpshared'?
0:29.28 int r1 = pthread_condattr_setclock(&attr, WhichClock);
0:29.28 ^~~~~~~~~~~~~~~~~~~~~~~~~
0:29.28 pthread_condattr_setpshared
0:29.29 /usr/include/pthread.h:322:5: note: 'pthread_condattr_setpshared' declared here
0:29.29 int pthread_condattr_setpshared(pthread_condattr_t *, int);
0:29.29 ^
0:29.29 1 error generated.
0:29.29
0:29.29 In the directory /Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/js/src
0:29.29 The following command failed to execute properly:
0:29.29 /usr/bin/clang++ -std=gnu++11 -o ConditionVariable.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DENABLE_BINARYDATA -DENABLE_SIMD -DENABLE_SHARED_ARRAY_BUFFER -DEXPORT_JS_API -DJS_HAS_CTYPES -DDLL_PREFIX="lib" -DDLL_SUFFIX=".dylib" -DFFI_BUILDING -I/Users/ojab/Documents/repos/mozilla-central/js/src -I/Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/js/src -I/Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/js/src/ctypes/libffi/include -I/Users/ojab/Documents/repos/mozilla-central/intl/icu/source/common -I/Users/ojab/Documents/repos/mozilla-central/intl/icu/source/i18n -I/Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/dist/include -I/Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /Users/ojab/Documents/repos/mozilla-central/obj-x86_64-apple-darwin16.0.0/js/src/js-confdefs.h -MD -MP -MF .deps/ConditionVariable.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wclass-varargs -Wimplicit-fallthrough -Wloop-analysis -Wstring-conversion -Wthread-safety -Wno-invalid-offsetof -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-common -stdlib=libc++ -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -O3 -fno-stack-protector -fomit-frame-pointer -Wno-shadow /Users/ojab/Documents/repos/mozilla-central/js/src/threading/posix/ConditionVariable.cpp
0:29.29 make[5]: *** [ConditionVariable.o] Error 1
0:29.30 make[4]: *** [js/src/target] Error 2
0:29.30 make[4]: *** Waiting for unfinished jobs....
Attachment #8767581 -
Attachment is patch: true
Attachment #8767581 -
Attachment mime type: text/x-patch → text/plain
Attachment #8767581 -
Flags: review?(terrence)
fixed bug number in commit message
Attachment #8767581 -
Attachment is obsolete: true
Attachment #8767581 -
Flags: review?(terrence)
Attachment #8767592 -
Flags: review?(terrence)
Comment 3•9 years ago
|
||
Comment on attachment 8767592 [details] [diff] [review]
sierra_js.patch
Review of attachment 8767592 [details] [diff] [review]:
-----------------------------------------------------------------
Thank you for the fix!
Attachment #8767592 -
Flags: review?(terrence) → review+
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/43b1143f2930
Don't USE_CLOCK_API on macOS. r=terrence
Keywords: checkin-needed
Comment 5•9 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Updated•9 years ago
|
Comment 6•9 years ago
|
||
Comment on attachment 8767592 [details] [diff] [review]
sierra_js.patch
Approval Request Comment
[Feature/regressing bug #]: macOS 10.12 Sierra
[User impact if declined]: Developers who work on 10.12 will not be able to compile Firefox, for example when they want to test their fixes for uplift on release branches
[Describe test coverage new/current, TreeHerder]: none, we don't have automatic builders on 10.12 yet
[Risks and why]: extremely low, the patch is just making sure that the #ifdef works on 10.12 the way it did on 10.11.
[String/UUID change made/needed]: none
Attachment #8767592 -
Flags: approval-mozilla-beta?
Attachment #8767592 -
Flags: approval-mozilla-aurora?
Comment 7•9 years ago
|
||
Comment on attachment 8767592 [details] [diff] [review]
sierra_js.patch
Review of attachment 8767592 [details] [diff] [review]:
-----------------------------------------------------------------
It's too late for 48 beta. Let's let it ride the train on 49 and not fix in 48 to mitigate the risks on the release.
Attachment #8767592 -
Flags: approval-mozilla-beta?
Attachment #8767592 -
Flags: approval-mozilla-beta-
Attachment #8767592 -
Flags: approval-mozilla-aurora?
Attachment #8767592 -
Flags: approval-mozilla-aurora+
Updated•9 years ago
|
Comment 8•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•