Bug 1284198 - Don't USE_CLOCK_API on macOS. r=terrence

macOS 10.12 like Android has clock functions, but not pthread_condattr_setclock